# rpnfl

./: README.md  compiler.md  ideas.md  meta.md  misc.md  observation.md  sandbox.md  why.md
parsetest/: ChangeLog.md  README.md  package.yaml  parsetest.cabal  stack.yaml
parsetest/app/: Main.hs
rpnfl-parser/: Cargo.toml  README.md  watch_and_parse.sh
rpnfl-parser/ex/: example1.rpnfl
rpnfl-parser/src/: ast.rs  main.rs  parse.lalrpop
scope-lambda-calc/: README.md  note.txt  scope-lambda-calc.agda  scope-lambda-calc.agdai
scope-lambda-calc/scope_lambda/: Cargo.toml
scope-lambda-calc/scope_lambda/src/: ast.rs  lib.rs  main.rs  parse.lalrpop  reduce.rs
